--- a/Index.html
+++ b/Index.html
@@ -47,20 +47,22 @@
                 <h3 id="testWin">Test win</h3>
             </main>
         </div>
+<!--Victory Page-->
         <div class="victory flex-container" id="victory">
             <h2>You Won!</h2>
             <section class="stats flex-container">
                 <h2>stats</h2>
-                <section class="stars flex-container" id="stars-end">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
+                <section class="stars flex-container" id="starsEnd">
+                    <i class="fa fa-star" id="star4"></i>
+                    <i class="fa fa-star" id="star4"></i>
+                    <i class="fa fa-star" id="star4"></i>
                 </section>
-                <h3>Time taken: <span id="timeTaken">1:00</span></h3>
-                <h3>Moves Made: <span id="movesMade">15</span></h3>
+                <h3>Time taken: <span id="timeTaken">1:00</span> seconds</h3>
+                <h3>Moves Made: <span id="movesMadeEnd">15</span></h3>
             </section>
             <h2 class="reset" id="restart"><i class="fa fa-undo"></i> Restart?</h2>
         </div>
+        
         <script src="js/app.js"></script>
     </body>
     
