remove 'test win' button

--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
                 <section class="game flex-container" id="gameCanvas">
                     <h2 id="startGame">Start Game</h2>
                 </section>
-                <h3 id="testWin">Test win</h3>
+<!--                <h3 id="testWin">Test win</h3>-->
             </main>
         </div>
 <!--Victory Page-->
