--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
-    <head>
+
+<head>
     <title>Zach Moore</title>
     <!--Meta-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--TODO! change this meta tag content to something relative-->
     <meta name="description" content="A memory matching game to test your brain">
 
     <!--External Links-->
@@ -33,6 +33,7 @@
                 <section class="turns">
                     <h3>Moves Made: <span id="movesMade">0</span></h3>
                 </section>
+                <h3>Timer: <span id="timer">0</span></h3>
                 <i class="fa fa-undo reset" id="reset"></i>
             </section>
 
@@ -62,5 +63,5 @@
 
     <script src="js/app.js"></script>
 </body>
-    
+
 </html>
